--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ nav a{
     color: #ffa600;
 }
 .hero{
-    background-image: url(/images/hero-img.jpg);
+    background-image: url(./images/hero-img.jpg);
     background-position: center;
     text-align: center;
     background-size: cover;
